# controllers/userController.js
@@ -73,7 +73,7 @@ export const logoutUser = (req, res) => {
 
 // Get User Profile
 export const getUserProfile = async (req, res) => {
-    const token = req.headers.authorization?.split(' ')[1]; // Bearer <token>
+    const token = req.headers.authorization?.split(' ')[1];
 
     if (!token) {
         return res.status(403).json({ message: 'No token provided' });
